--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div class="landing__page">
         <div class="landingpage__background">
             <img src="assets/img/dottedmap.png">
-            <div>
+            <div class="animated__svg">
                 <!--?xml version="1.0" encoding="UTF-8"?-->
                 <svg width="700px" viewBox="0 0 677 503" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="" class="">
                     <!-- Generator: Sketch 46.2 (44496) - http://www.bohemiancoding.com/sketch -->
@@ -104,6 +104,33 @@
                         </g>
                     </g>
                 <style>.rOpJHjoq_0{stroke-dasharray:255 257;stroke-dashoffset:256;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_1{stroke-dasharray:284 286;stroke-dashoffset:285;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_2{stroke-dasharray:110 112;stroke-dashoffset:111;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_3{stroke-dasharray:62 64;stroke-dashoffset:63;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_4{stroke-dasharray:91 93;stroke-dashoffset:92;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_5{stroke-dasharray:307 309;stroke-dashoffset:308;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_6{stroke-dasharray:180 182;stroke-dashoffset:181;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_7{stroke-dasharray:125 127;stroke-dashoffset:126;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_8{stroke-dasharray:100 102;stroke-dashoffset:101;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_9{stroke-dasharray:550 552;stroke-dashoffset:551;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_10{stroke-dasharray:103 105;stroke-dashoffset:104;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_11{stroke-dasharray:59 61;stroke-dashoffset:60;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_12{stroke-dasharray:407 409;stroke-dashoffset:408;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_13{stroke-dasharray:619 621;stroke-dashoffset:620;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_14{stroke-dasharray:562 564;stroke-dashoffset:563;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_15{stroke-dasharray:596 598;stroke-dashoffset:597;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_16{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_17{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_18{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_19{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_20{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_21{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_22{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_23{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_24{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_25{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}.rOpJHjoq_26{stroke-dasharray:63 65;stroke-dashoffset:64;animation:rOpJHjoq_draw 2000ms ease-in-out 0ms forwards;}@keyframes rOpJHjoq_draw{100%{stroke-dashoffset:0;}}@keyframes rOpJHjoq_fade{0%{stroke-opacity:1;}93.54838709677419%{stroke-opacity:1;}100%{stroke-opacity:0;}}</style></svg>
+
+                    <div class="animated__neo">
+                        <!--?xml version="1.0" encoding="utf-8"?-->
+                        <!-- Generator: Adobe Illustrator 22.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 434.7 219.2" style="" xml:space="preserve">
+                        <style type="text/css">
+                            .st0{display:none;fill:#841F1F;}
+                            .st1{fill:none;stroke:#FFFFFF;stroke-linecap:round;stroke-linejoin:bevel;stroke-miterlimit:10;}
+                            .st2{display:none;fill:none;stroke:#FFFFFF;stroke-width:16.75;stroke-linejoin:round;stroke-miterlimit:10;}
+                            .st3{fill:none;stroke:#FFFFFF;stroke-miterlimit:10;}
+                        </style>
+                        <path class="st0 bsPexdvk_0" width="482.9" height="306.2" d="M-48.2 -28.8 L434.7 -28.8 L434.7 277.4 L-48.2 277.4 Z"></path>
+                        <path class="st1 bsPexdvk_1" d="M133.3,159.1V104c-0.1-13.6-11-24.7-24.3-24.7h-7.2c-13.4,0-24.2,11-24.3,24.7v55.1H60.7V104
+                            c0-23,18.4-41.8,41-41.8h7.2c22.6,0,41,18.8,41,41.8v55.1H133.3"></path>
+                        <path class="st2 bsPexdvk_2" d="M68.8,159v-54.2c0-18.9,15.1-34.2,33.6-34.2h5.9c18.6,0,33.6,15.4,33.6,34.2V159"></path>
+                        <path class="st3 bsPexdvk_3" d="M291,102.4l-13.5,19.8c2.9,22.1,24.1,36.9,47.9,36.9c27.2,0,49.4-21.7,49.4-48.4s-22.1-48.4-49.4-48.4
+                            c-13.8,0-25.6,4.4-35.9,13.3c-8.8,7.7-15.4,17.8-22,27.6c-14.2,21.2-27.5,41.2-60.5,41.2c-16.2,0-30-11-33.6-26.5"></path>
+                        <path class="st3 bsPexdvk_4" d="M173.4,117.9h82.8v-7.3c0-19.6-12-37.3-30.5-44.8c-18.5-7.5-39.7-3.3-53.7,10.5c-14.1,13.9-18.3,34.7-10.7,52.8
+                            c7.6,18.1,25.7,29.9,45.6,29.9c18.4,0,33.6-5.2,46.5-15.7c11.2-9.2,18.9-20.7,26.4-32c6.3-9.5,12.2-18.3,19.5-24.7
+                            c7.5-6.6,15.9-9.7,26-9.7c19,0,34.4,15.1,34.4,33.8c0,18.7-15.4,33.8-34.4,33.8c-16.6,0-36.9-11.9-34.4-42.1"></path>
+                        <path class="st3 bsPexdvk_5" d="M240.5,103.2h-67.3c3.6-15.4,17.4-26.5,33.6-26.5C223,76.7,237,87.6,240.5,103.2"></path>
+                        <style>.bsPexdvk_0{stroke-dasharray:1579 1581;stroke-dashoffset:1580;animation:bsPexdvk_draw 2000ms ease-in-out 2000ms forwards;}.bsPexdvk_1{stroke-dasharray:476 478;stroke-dashoffset:477;animation:bsPexdvk_draw 2000ms ease-in-out 2000ms forwards;}.bsPexdvk_2{stroke-dasharray:221 223;stroke-dashoffset:222;animation:bsPexdvk_draw 2000ms ease-in-out 2000ms forwards;}.bsPexdvk_3{stroke-dasharray:442 444;stroke-dashoffset:443;animation:bsPexdvk_draw 2000ms ease-in-out 2000ms forwards;}.bsPexdvk_4{stroke-dasharray:642 644;stroke-dashoffset:643;animation:bsPexdvk_draw 2000ms ease-in-out 2000ms forwards;}.bsPexdvk_5{stroke-dasharray:160 162;stroke-dashoffset:161;animation:bsPexdvk_draw 2000ms ease-in-out 2000ms forwards;}@keyframes bsPexdvk_draw{100%{stroke-dashoffset:0;}}@keyframes bsPexdvk_fade{0%{stroke-opacity:1;}93.54838709677419%{stroke-opacity:1;}100%{stroke-opacity:0;}}</style></svg>
+
+                        <div class="animated__fill">
+                            
+                        </div>
+                    </div>
             </div>   
         </div>
         <div id="nextToContent">
@@ -166,7 +193,7 @@
             <aside class="main__sidebar" id="sidebar">
                 <ul>
                     <li>
-                        <a href="#content-1">do</a>
+                        <a href="#content-1" class="active">do</a>
                     </li>
                     <li>
                         <a href="#content-2">use</a>
