--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                     <g id="Design-3" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                         <g id="1" transform="translate(-272.000000, -155.000000)">
                             <g id="Group-2" transform="translate(272.000000, 155.000000)">
-                                <g id="lines" opacity="0.3" transform="translate(11.000000, 8.000000)" stroke="#FFFFFF" stroke-linecap="square">
+                                <g id="lines" opacity="0.5" transform="translate(11.000000, 8.000000)" stroke="#FFFFFF" stroke-linecap="square">
                                     <path d="M58.5,333.5 L0.5,85.5" id="Line" class="rOpJHjoq_0"></path>
                                     <path d="M92.5,386.5 L111.5,103.5" id="Line-2" class="rOpJHjoq_1"></path>
                                     <path d="M2.5,83.5 L110.5,102.5" id="Line-3" class="rOpJHjoq_2"></path>
@@ -545,9 +545,9 @@
                 </div>
                 <div class="socmed__contact">
                     <ul>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#8b8b8b" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z"/></svg></li>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#8b8b8b" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg></li>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#8b8b8b" viewBox="0 0 24 24"><path d="M7 11v2.4h3.97c-.16 1.029-1.2 3.02-3.97 3.02-2.39 0-4.34-1.979-4.34-4.42 0-2.44 1.95-4.42 4.34-4.42 1.36 0 2.27.58 2.79 1.08l1.9-1.83c-1.22-1.14-2.8-1.83-4.69-1.83-3.87 0-7 3.13-7 7s3.13 7 7 7c4.04 0 6.721-2.84 6.721-6.84 0-.46-.051-.81-.111-1.16h-6.61zm0 0 17 2h-3v3h-2v-3h-3v-2h3v-3h2v3h3v2z" fill-rule="evenodd" clip-rule="evenodd"/></svg></li>
+                        <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
+                        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                        <li><i class="fa fa-google-plus" aria-hidden="true"></i></li>
                     </ul>
                     <h5>&copy;Nexgen English Online</h5>
                 </div>
